--- a/requirements.txt
+++ b/requirements.txt
@@ -10,14 +10,16 @@ google-cloud-bigquery==3.26.0
 google-cloud-core==2.4.1
 google-cloud-resource-manager==1.13.0
 google-cloud-storage==2.18.2
-google-crc32c==1.6.0
+# google-crc32c==1.6.0
+google-crc32c==1.6.0.dev2
 google-resumable-media==2.7.2
 googleapis-common-protos==1.65.0
 grpc-google-iam-v1==0.13.1
 grpcio==1.67.0
 grpcio-status==1.67.0
 idna==3.10
-numpy==2.1.2
+# numpy==2.1.2
+numpy==1.24.4
 packaging==24.1
 proto-plus==1.25.0
 protobuf==5.28.3
